tests/unsupported_spread_args/unsupported_spread_args.exp
Error ----------------------------------------------------------------------------------------------------- test.js:7:26

A spread argument is unsupported here. [unsupported-syntax]

   7| Object.getPrototypeOf(...arr); // error
                               ^^^


Error ---------------------------------------------------------------------------------------------------- test.js:11:29

A spread argument is unsupported here. [unsupported-syntax]

   11| const o1 = Object.assign(...objArr); // error
                                   ^^^^^^


Error ----------------------------------------------------------------------------------------------------- test.js:17:1

Incorrect arguments passed to call of method `assign` because number [1] is not an object. [not-an-object]

   test.js:17:1
   17| Object.assign({}, ...[1]); // error
       ^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   test.js:17:23
   17| Object.assign({}, ...[1]); // error
                             ^ [1]



Found 3 errors
